	  that slang and other non-ncurses versions of curses will
	  properly place the cursor back in the edit window instead of
	  leaving it at the end of the statusbar. (DLR)
  do_credits()
	- Use napms() instead of nanosleep(), as it does the same thing
	  (aside from taking an argument in milliseconds instead of
	  microseconds) and curses includes it. (DLR)
	- Overhaul for efficiency. (David Benbennick)
- configure.ac:
	- Add tests for isblank() and strcasestr(), and define
	  _GNU_SOURCE so that the tests work properly.  Increase the
	  minimum required autoconf version to 2.54. (DLR)
	- Reformat the test programs so that they aren't packed into
	  fewer lines than usual, so as to make them easier to read, and
	  remove unnecessary inclusion of stdio.h in the slang test
	  programs. (DLR)
	- Remove the checks for resizeterm() and wresize(), as they're
	  no longer needed. (DLR)
- faq.html:
	- Removed question about the NumLock glitch, as it's no longer
	  needed. (DLR)
- nano.1:
	- Document restricted mode. (IO ERROR)  DLR: Add minor
	  modifications to account for the above changes.
- nano.texi:
	- Fix toggle inaccuracies: Meta-L now toggles line wrapping, and
	  Meta-< and Meta-> aren't toggles. (DLR)
	- Document restricted mode. (IO ERROR)  DLR: Add minor
	  modifications to account for the above changes.
	- Fix version number inaccuracies: Search/replace history and
	  sorting/uniqueness filtering for the internal spell chacker
	  were added in nano 1.1.99pre1. (DLR)
- nanorc.sample:
	- Add missing mouse entry, and update the nanorc sample regexes
	  to account for the backupdir and mouse options. (DLR)
- README.CVS:
	- Increase the minimum required autoconf version to 2.54, and
	  change the recommended automake version 1.7 to the minimum
	  required automake version.  Note that autoconf 2.54 will
	  technically also work with automake 1.6c, but that is a CVS
	  version as opposed to a stable release version, and automake